--- a/package.json
+++ b/package.json
@@ -1,22 +1,57 @@
 {
-  "name": "church-starter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.15.1",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  }
+	"name": "nextjs-starter",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test:unit": "vitest",
+		"test:unit:coverage": "vitest run --coverage",
+		"test:e2e": "playwright test"
+	},
+	"dependencies": {
+		"@carbon/icons-react": "^11.17.0",
+		"@carbon/pictograms-react": "^11.40.0",
+		"@supabase/auth-helpers-nextjs": "^0.5.6",
+		"@supabase/auth-helpers-react": "^0.3.1",
+		"deep-email-validator": "^0.1.21",
+		"eslint": "8.36.0",
+		"eslint-config-next": "13.2.4",
+		"fathom-client": "^3.5.0",
+		"highlight-words": "^1.2.1",
+		"luxon": "^3.3.0",
+		"next": "13.2.4",
+		"pluralize": "^8.0.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hotkeys-hook": "^4.3.8",
+		"title-case": "^3.0.3",
+		"typescript": "4.9.5",
+		"uuid": "^9.0.0"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.31.2",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.3",
+		"@testing-library/react": "^14.0.0",
+		"@types/carbon__icons-react": "^11.15.0",
+		"@types/carbon__pictograms-react": "^11.31.0",
+		"@types/luxon": "^3.2.0",
+		"@types/node": "^18.15.1",
+		"@types/pluralize": "^0.0.29",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@types/uuid": "^9.0.1",
+		"@vitejs/plugin-react": "^3.1.0",
+		"autoprefixer": "^10.4.14",
+		"jsdom": "^21.1.1",
+		"next-themes": "^0.2.1",
+		"postcss": "^8.4.21",
+		"prettier-plugin-tailwindcss": "^0.2.4",
+		"tailwind-scrollbar": "^2.1.0",
+		"tailwindcss": "^3.2.7",
+		"vitest": "^0.29.2"
+	}
 }
