🏗️update: components, sentry, packages

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
+		"postbuild": "next-sitemap",
 		"start": "next start",
 		"lint": "next lint",
 		"test:unit": "vitest",
@@ -14,20 +15,35 @@
 	"dependencies": {
 		"@carbon/icons-react": "^11.17.0",
 		"@carbon/pictograms-react": "^11.40.0",
+		"@resvg/resvg-js": "^2.4.1",
+		"@sendgrid/client": "^7.7.0",
+		"@sendgrid/eventwebhook": "^7.7.0",
+		"@sendgrid/helpers": "^7.7.0",
+		"@sendgrid/mail": "^7.7.0",
+		"@sentry/nextjs": "^7.43.0",
+		"@stripe/stripe-js": "^1.49.0",
 		"@supabase/auth-helpers-nextjs": "^0.5.6",
 		"@supabase/auth-helpers-react": "^0.3.1",
+		"convert": "^4.10.0",
 		"deep-email-validator": "^0.1.21",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
 		"fathom-client": "^3.5.0",
 		"highlight-words": "^1.2.1",
+		"libphonenumber-js": "^1.10.21",
 		"luxon": "^3.3.0",
 		"next": "13.2.4",
+		"next-seo": "^5.15.0",
+		"next-sitemap": "^4.0.5",
 		"pluralize": "^8.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hotkeys-hook": "^4.3.8",
+		"satori": "^0.4.2",
+		"satori-html": "^0.3.2",
+		"stripe": "^11.14.0",
 		"title-case": "^3.0.3",
+		"twilio": "^4.8.0",
 		"typescript": "4.9.5",
 		"uuid": "^9.0.0"
 	},
