--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@supabase/auth-helpers-nextjs": "^0.5.6",
 		"@supabase/auth-helpers-react": "^0.3.1",
 		"convert": "^4.10.0",
+		"country-data": "^0.0.31",
 		"deep-email-validator": "^0.1.21",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
@@ -54,6 +55,7 @@
 		"@testing-library/react": "^14.0.0",
 		"@types/carbon__icons-react": "^11.15.0",
 		"@types/carbon__pictograms-react": "^11.31.0",
+		"@types/country-data": "^0.0.2",
 		"@types/luxon": "^3.2.0",
 		"@types/node": "^18.15.1",
 		"@types/pluralize": "^0.0.29",
