--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nextjs-starter",
+	"name": "graphene",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -40,6 +40,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hotkeys-hook": "^4.3.8",
+		"react-loading-skeleton": "^3.2.0",
 		"satori": "^0.4.2",
 		"satori-html": "^0.3.2",
 		"stripe": "^11.14.0",
