--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "graphene",
+	"name": "ren-church",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -15,6 +15,9 @@
 	"dependencies": {
 		"@carbon/icons-react": "^11.17.0",
 		"@carbon/pictograms-react": "^11.40.0",
+		"@fontsource-variable/oswald": "^5.0.2",
+		"@fontsource/dm-serif-display": "^5.0.2",
+		"@fontsource/lato": "^5.0.2",
 		"@resvg/resvg-js": "^2.4.1",
 		"@sendgrid/client": "^7.7.0",
 		"@sendgrid/eventwebhook": "^7.7.0",
